# octetos-chemistry

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  Molecule.cc  Molecule.hh  atom.cc  atom.hh  atoms.cc  atoms.hh  main.cc
tests/: Makefile.am  v0.cc
