

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = octetos_chimestry

octetos_chimestry_SOURCES = \
	main.cc

octetos_chimestry_LDFLAGS = 

octetos_chimestry_LDADD = 


